# slam

./: CMakeLists.txt  makefile
app/: run_kitti_stereo.cpp
cmake_modules/: FindG2O.cmake
config/: default.yaml
doc/: note.md
include/myslam/: algorithm.h  backend.h  camera.h  common_include.h  config.h  dataset.h  feature.h  frame.h  frontend.h  map.h  mappoint.h  viewer.h  visual_odometry.h
src/: CMakeLists.txt  backend.cpp  camera.cpp  config.cpp  dataset.cpp  frame.cpp  frontend.cpp  map.cpp  mappoint.cpp  viewer.cpp  visual_odometry.cpp
test/: CMakeLists.txt  test_glog.cpp
